Avoid overflow of the secret hash div

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -179,3 +179,6 @@ body {
 .bronze {
     background-color: #ff8c0080; 
 }
+.secretHash{
+    word-break:break-all;
+}
